# cocoro-influencer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  find_scene.py  install_frontend.sh  install_sadtalker.sh  install_sbv2.sh  main.py  models  outputs  pyproject.toml  requirements.txt  run_hybrid_ui.bat  test_hybrid.py  test_lipsync.py
api/: __init__.py  server.py
api/static/: index.html
config/: .env.example  __init__.py  comfyui_nodes.json  settings.py
deploy/: cocoro-studio.service
docs/: 03_commercial_api_architecture.md  DESIGN_SPEC.md  migration_to_render01.md  sample_script.json
frontend/: next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  types.ts
scripts/: _download_all_models.py  _download_wan21.py  _download_wan21_direct.ps1  _install_nodes_batch.ps1  download_models.py  generate_hunyuan_i2v_video.py  generate_instantid_poses.py  generate_musetalk_lipsync.py  generate_wan22_video.py  generate_wan_video.py  install_comfyui.py  install_models.py  liveportrait_inference.py  sadtalker_inference.py  setup.py  wav2lip_fullbody.py
src/: __init__.py  cli.py
src/agent/: __init__.py  cocoro_client.py  interface.py  task_handler.py  worker.py
src/api/: __init__.py  main.py  models.py  server.py
src/api/routes/: __init__.py  avatars.py  jobs.py  pipeline.py  videos.py
src/db/: __init__.py  schema.py
src/engines/: __init__.py  base.py  echomimic_engine.py  flux_engine.py  manager.py  script_engine.py  voice_engine.py  wan_engine.py
src/pipeline/: __init__.py  compositor.py  orchestrator.py  script_parser.py
tests/: test_agent.py  test_api.py  test_engines.py  test_generate.py  test_ollama.py  test_pipeline.py  test_script_engine.py
ui/: index.html
(+18 files in other folders)
