[project]
name = "cocoro-influencer"
version = "0.1.0"
description = "企業専属AIインフルエンサー生成システム"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "diffusers>=0.30",
    "transformers",
    "safetensors",
    "accelerate",
    "typer[all]",
    "Pillow",
]

[project.optional-dependencies]
phase2 = ["ffmpeg-python", "voicevox-client"]
phase3 = ["fastapi", "uvicorn", "asyncpg", "sqlalchemy"]
phase4 = ["celery", "redis", "google-genai", "anthropic"]
dev = ["pytest", "ruff"]

[project.scripts]
cocoro-inf = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
