[project]
name = "cocoro-influencer"
version = "0.1.0"
description = "企業専属AIインフルエンサー生成システム"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "diffusers>=0.30",
    "transformers",
    "safetensors",
    "accelerate",
    "typer[all]",
    "Pillow",
    "google-genai>=1.68.0",
    "anthropic>=0.86.0",
]

[project.optional-dependencies]
phase2 = ["ffmpeg-python", "voicevox-client"]
phase3 = ["fastapi", "uvicorn[standard]", "asyncpg", "sqlalchemy[asyncio]", "aiosqlite", "httpx", "python-multipart"]
phase4 = ["celery", "redis", "google-genai", "anthropic"]
dev = ["pytest", "ruff"]

[project.scripts]
cocoro-inf = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "anyio[asyncio]>=4.12.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
